feat(local): add native scoped cloud development (LWC-361)
